--- a/workflow/MR_JTI.ipynb
+++ b/workflow/MR_JTI.ipynb
@@ -233,7 +233,7 @@
    },
    "outputs": [],
    "source": [
-    "nohup sos run ~/GIT/neuro-twas/workflow/MR_JTI.ipynb Input_processing \\\n",
+    "nohup sos run ~/GIT/neuro-twas/workflow/MR_JTI.ipynb fusion_tf \\\n",
     "  --tissue_list \"/mnt/mfs/statgen/neuro-twas/JAZF1_JTI/tissue_list\" \\\n",
     "  --geneid \"ENSG00000153814\" \\\n",
     "  --genotype_path \"/mnt/mfs/statgen/neuro-twas/JAZF1/cache/GTEx_V8.ENSG00000153814.merged\" \\\n",
@@ -243,7 +243,8 @@
     "  --similarity \"~/tissue_similarity_tbl_8by49.txt\" \\\n",
     "  --wd ./ \\\n",
     "  --prefix \"JAZF1_JTI_8\" \\\n",
-    "  --container /mnt/mfs/statgen/containers/twas_latest.sif &\n",
+    "  --container /mnt/mfs/statgen/containers/twas_latest.sif \\\n",
+    "  -J 50 -q csg -c ~/GIT/neuro-twas/code/csg.yml  -s build &\n",
     "\n",
     "\n",
     "nohup sos run ~/GIT/neuro-twas/workflow/MR_JTI.ipynb JTI \\\n",
@@ -272,18 +273,83 @@
     "\n",
     "\n",
     "nohup sos run ~/GIT/neuro-twas/workflow/MR_JTI.ipynb association_test \\\n",
+    "  --tissue_list \"/mnt/mfs/statgen/neuro-twas/JAZF1_JTI8/tissue_list\" \\\n",
+    "  --geneid \"ENSG00000153814\" \\\n",
+    "  --genotype_path \"/mnt/mfs/statgen/neuro-twas/JAZF1/cache/GTEx_V8.ENSG00000153814.merged\" \\\n",
+    "  --molecular_pheno \"/mnt/mfs/statgen/neuro-twas/JAZF1/named_exp.txt\" \\\n",
+    "  --script_dir /home/hs3163/JTI_src/ \\\n",
+    "  --similarity \"/mnt/mfs/statgen/neuro-twas/JAZF1/tissue_similarity_tbl_8by49.txt\" \\\n",
+    "  --gencode_path \"/mnt/mfs/statgen/neuro-twas/JAZF1_JTI8/genecode\" \\\n",
+    "  --gwas_sumstat /home/hs3163/Project/one_gene/data/Asthma.sumstat \\\n",
+    "  --wd ./ \\\n",
+    "  --container /mnt/mfs/statgen/containers/twas_latest.sif & \\\n",
+    "  -J 50 -q csg -c ~/GIT/neuro-twas/code/csg.yml  -s build  &"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "kernel": "SoS"
+   },
+   "outputs": [],
+   "source": [
+    "for i in {5..9}\n",
+    "do \n",
+    "\n",
+    "nohup sos run ~/GIT/neuro-twas/workflow/MR_JTI.ipynb fusion_tf \\\n",
     "  --tissue_list \"/mnt/mfs/statgen/neuro-twas/JAZF1_JTI/tissue_list\" \\\n",
     "  --geneid \"ENSG00000153814\" \\\n",
     "  --genotype_path \"/mnt/mfs/statgen/neuro-twas/JAZF1/cache/GTEx_V8.ENSG00000153814.merged\" \\\n",
     "  --molecular_pheno \"/mnt/mfs/statgen/neuro-twas/JAZF1/named_exp.txt\" \\\n",
     "  --script_dir /home/hs3163/JTI_src/ \\\n",
-    "  --similarity \"/mnt/mfs/statgen/neuro-twas/JAZF1/tissue_similarity_tbl_2by49.txt\" \\\n",
+    "  --similarity ~/tissue_similarity_tbl_8by49_sim0.$i.txt \\\n",
     "  --gencode_path \"/mnt/mfs/statgen/neuro-twas/JAZF1_JTI/genecode\" \\\n",
+    "  --wd  /mnt/mfs/statgen/neuro-twas/JAZF1_JTI_sim$i/ \\\n",
+    "  --container /mnt/mfs/statgen/containers/twas_latest.sif &\n",
+    "\n",
+    "done\n",
+    "\n",
+    "\n",
+    "\n",
+    "for i in {5..9}\n",
+    "do \n",
+    "\n",
+    "nohup sos run ~/GIT/neuro-twas/workflow/MR_JTI.ipynb association_test \\\n",
+    "  --tissue_list \"/mnt/mfs/statgen/neuro-twas/JAZF1_JTI/tissue_list\" \\\n",
+    "  --geneid \"ENSG00000153814\" \\\n",
+    "  --genotype_path \"/mnt/mfs/statgen/neuro-twas/JAZF1/cache/GTEx_V8.ENSG00000153814.merged\" \\\n",
+    "  --molecular_pheno \"/mnt/mfs/statgen/neuro-twas/JAZF1/named_exp.txt\" \\\n",
+    "  --script_dir /home/hs3163/JTI_src/ \\\n",
+    "  --similarity ~/tissue_similarity_tbl_8by49_sim0.$i.txt \\\n",
+    "  --gencode_path \"/mnt/mfs/statgen/neuro-twas/JAZF1_JTI/genecode\" \\\n",
+    "  --wd  /mnt/mfs/statgen/neuro-twas/JAZF1_JTI_sim$i/ \\\n",
     "  --gwas_sumstat /home/hs3163/Project/one_gene/data/Asthma.sumstat \\\n",
-    "  --wd ./ \\\n",
-    "  --container /mnt/mfs/statgen/containers/twas_latest.sif \\\n",
-    "  -J 50 -q csg -c ~/GIT/neuro-twas/code/csg.yml  -s build  &"
+    "  --container /mnt/mfs/statgen/containers/twas_latest.sif &\n",
+    "\n",
+    "done\n",
+    "\n",
+    "\n",
+    "for i in {5..9}\n",
+    "do \n",
+    "\n",
+    "head -100 /mnt/mfs/statgen/neuro-twas/JAZF1_JTI_sim/Asthma_chr7.twas.txt \n",
+    "\n",
+    "done\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "kernel": "SoS"
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -428,7 +494,7 @@
     "[Input_processing]\n",
     "input: molecular_pheno, for_each = \"tissue\"\n",
     "output: f'{wd:a}/cache/{prefix}_{next(iter(_tissue))}.txt'\n",
-    "task: trunk_workers = 1, trunk_size = 1, walltime = '4h',  mem = '60G', tags = f'{step_name}_{_output:bn}'   \n",
+    "task: trunk_workers = 1, trunk_size = 1, walltime = '4h',  mem = '6G', tags = f'{step_name}_{_output:bn}'   \n",
     "R: expand = \"$[ ]\", stderr = f'{_output}.stderr', stdout = f'{_output}.stdout',container = container\n",
     "    library(\"dplyr\")\n",
     "    library(\"tibble\")\n",
@@ -458,10 +524,6 @@
     "task: trunk_workers = 1, trunk_size = 1, walltime = '4h',  mem = '60G', tags = f'{step_name}_{_output:bn}'   \n",
     "R: expand = \"$[ ]\", stderr = f'{_output}.stderr', stdout = f'{_output}.stdout',container = container\n",
     "    library('glmnet')\n",
-    "    library(\"tibble\")\n",
-    "    library(\"readr\")\n",
-    "    library(\"purrr\")\n",
-    "    library(\"modelr\")\n",
     "    tissue = \"$[next(iter(_tissue))]\"\n",
     "    geneid = \"$[geneid]\"\n",
     "    genotype_path = \"$[genotype_path]\"\n",
@@ -547,7 +609,6 @@
     "    \n",
     "    cat(' INFO grid searching ...\\n')\n",
     "    #grid search for hyper-parameter pairs\n",
-    "    cv_info = list()\n",
     "    for (j in 1:nrow(r_matrix)){\n",
     "      exp_power=r_matrix[j,1]\n",
     "      exp$w<-(exp$exp_w)^exp_power\n",
@@ -570,31 +631,19 @@
     "      if ('try-error' %in% class(ans)){\n",
     "        r_matrix[j,'r_test']<-0\n",
     "      }else{\n",
-    "      test_ana = tibble(rsq = 0, pval = 0)\n",
-    "        for(i in 1:max(d$id_map)){\n",
-    "          fold_pos = which(d$id_map == i)\n",
-    "          test_pos = intersect(fold_pos, tt_pos)\n",
-    "          test_ans_i<-lm(ans$fit.preval[test_pos,which(ans$lambda==ans$lambda.min)]~d[test_pos,'exp'])%>%summary\n",
-    "          test_ana[i,] = list(test_ans_i$adj.r.squared,test_ans_i$coefficients[2,4])\n",
-    "      }\n",
-    "        ana_stat = colMeans(test_ana)\n",
     "        #correlation between pred and obs expression levels\n",
+    "        cor_ans<-cor.test(ans$fit.preval[tt_pos,which(ans$lambda==ans$lambda.min)],d[tt_pos,'exp'])\n",
     "        \n",
-    "        r_matrix[j,'r_test']<-ana_stat[1]\n",
-    "        r_matrix[j,'p_test']<-ana_stat[2]\n",
+    "        r_matrix[j,'r_test']<-cor_ans$estimate\n",
+    "        r_matrix[j,'p_test']<-cor_ans$p.value\n",
     "        r_matrix[j,'lambda']<-ans$lambda.min\n",
     "        \n",
     "        #collect the weights\n",
     "        beta_list[[j]]<-as.numeric(ans$glmnet.fit$beta[,which(ans$lambda==ans$lambda.min)])\n",
     "        \n",
     "      }\n",
-    "        #Save the cv information\n",
-    "        cv_info$ans[[j]] = ans\n",
-    "        cv_info$cv_stat[[j]] = test_ana \n",
     "    }\n",
-    "        cv_info$data = d\n",
-    "        saveRDS(cv_info, \"$[_output:an].cv.rds\")\n",
-    "  \n",
+    "    \n",
     "    #find the best hyperparameters with the largest r_test\n",
     "    best_row=which.max(r_matrix[,'r_test'])[1]\n",
     "    r_test=r_matrix[best_row,'r_test']\n",
@@ -603,7 +652,6 @@
     "    cat(' INFO the r = ',r_test,', p = ',p_test,' \\n')\n",
     "    \n",
     "    #---output---\n",
-    "     # if (p_test<0.05 & r_test>0.1){\n",
     "      snp_info$gene<-geneid\n",
     "      snp_info$r2<-r_test^2\n",
     "      snp_info$p<-p_test\n",
@@ -611,10 +659,9 @@
     "      snp_info$weight<-beta_list[[best_row]]\n",
     "      snp_info<-snp_info[,c(5,1:4,9,6:8)]\n",
     "      weight_file<-snp_info\n",
-    "     #  if (nrow(weight_file)>0){\n",
-    "        write.table(weight_file,\"$[_output:a]\",quote = F,row.names = F,sep = '\\t')\n",
-    "     #    } }\n",
-    "    \n",
+    "      write.table(weight_file,paste0(out_path,'/',geneid,'_',tissue,'.txt'),quote = F,row.names = F,sep = '\\t')\n",
+    "\n",
+    "\n",
     "    \n",
     "    #cleaning\n",
     "    cat(' INFO cleaning tmp folder \\n')\n",
@@ -643,19 +690,21 @@
     "    library(\"purrr\")\n",
     "    output = read_delim(\"$[_input]\",\"\\t\")\n",
     "    bim = read_delim(\"$[genotype_path].bim\",delim = \"\\t\",col_name = F)\n",
-    "    exp = read_delim(\"$[wd:a]/cache/$[prefix]_$[next(iter(_tissue))]\",delim = \"\\t\")\n",
-    "    snp = bim%>%filter(X2 %in% output$rsid)\n",
+    "    exp = read_delim(\"$[wd:a]/cache/$[prefix]_$[next(iter(_tissue))].txt\",delim = \"\\t\")\n",
+    "    snps = bim%>%filter(X2 %in% output$rsid)%>%as.data.frame\n",
     "    wgt.matrix = tibble(JTI = output$weight)%>%as.matrix\n",
     "    cv.performance = data.frame(JTI = c(output$r2[[1]],output$p[[1]]))\n",
+    "    rownames(cv.performance) = c(\"rsq\",\"pval\")\n",
     "    hsq <- hsq.pv <- NA\n",
     "    N.tot = exp%>%filter(exp_w == 1)%>%nrow\n",
     "    save(\n",
-    "    snp,\n",
+    "    snps,\n",
     "    wgt.matrix,\n",
     "    cv.performance,\n",
-    "    hsq = hsq.pv = NA\n",
+    "    hsq ,\n",
+    "    hsq.pv,\n",
     "    N.tot,\n",
-    "    file = $[_output]\n",
+    "    file = \"$[_output]\"\n",
     "    )"
    ]
   },
@@ -673,14 +722,14 @@
     "task: trunk_workers = 1, trunk_size = 1, walltime = '12h',  mem = '6G', tags = f'{step_name}_{_index}'\n",
     "R: expand= \"$[ ]\", stderr = f'{_input[0]}.split.stderr', stdout = f'{_input[0]}.split.stderr',container = container\n",
     "    library(\"dplyr\")\n",
-    "    library(\"plink2R\")\n",
     "    library(\"tibble\")\n",
     "    library(\"readr\")\n",
     "    library(\"purrr\")\n",
-    "    genecode = read_delim($[genecode_path:r],\"\\t\")\n",
-    "    genecode = genecode%>%filter(geneid == $[geneid:r])\n",
+    "    library(\"stringr\")\n",
+    "    genecode = read_delim(\"$[gencode_path]\",\"\\t\")\n",
+    "    genecode = genecode%>%filter(geneid == \"$[geneid]\")\n",
     "    out_tmp = tibble(WGT = c($[_input:r,]),\n",
-    "                     ID = $[geneid:r] ,\n",
+    "                     ID = \"$[geneid]\" ,\n",
     "                     CHR = str_remove(genecode$chr, \"chr\"),\n",
     "                     P0 = genecode$left,\n",
     "                     P1 = genecode$left\n",
@@ -702,12 +751,12 @@
     "# Path to GWAS summary statistics data (association results between SNP and disease in a GWAS)\n",
     "parameter: gwas_sumstat = path\n",
     "parameter: max_impute = 0.5\n",
-    "parameter: asso_mem = \"2G\"\n",
+    "parameter: asso_mem = \"6G\"\n",
     "input: gwas_sumstat, for_each = \"chrom_list\"\n",
     "output:f'{wd:a}/{gwas_sumstat:bn}_chr{_chrom_list}.twas.txt'\n",
     "\n",
     "task: trunk_workers = 1, trunk_size = 1, walltime = '4h',  mem = asso_mem, tags = f'{step_name}_{_output[0]:bn}'\n",
-    "bash: expand= \"$[ ]\", stderr = f'{_output:n}.stderr', stdout = f'{_output:n}.stdout', container = container, volumes = [f'{geno_file:and}:{geno_file:and}']\n",
+    "bash: expand= \"$[ ]\", stderr = f'{_output:n}.stderr', stdout = f'{_output:n}.stdout', container = container, volumes = [f'{genotype_path:and}:{genotype_path:and}']\n",
     "    FUSION.assoc_test.R \\\n",
     "    --sumstats $[_input] \\\n",
     "    --weights $[weights_list] \\\n",
