Missing data+Sumstat_analysis

--- a/workflow/complete_mv_susie_workflow.ipynb
+++ b/workflow/complete_mv_susie_workflow.ipynb
@@ -196,12 +196,13 @@
    "outputs": [],
    "source": [
     "    cd /home/hs3163/Project/Genome_prior/mixture_prior/output/RDS/  && ls *.rds | sed 's/\\.rds//g' > analysis_units.txt && cd -\n",
-    "    nohup sos run ~/GIT/bioworkflows/multivariate-fine-mapping/mixture_prior.ipynb extract_effects \\\n",
+    "    nohup sos run ~/GIT/bioworkflows/bioworkflows/multivariate-fine-mapping/mixture_prior.ipynb extract_effects \\\n",
     "        --analysis-units /home/hs3163/Project/Genome_prior/mixture_prior/output/RDS/analysis_units.txt \\\n",
     "        --datadir /home/hs3163/Project/Genome_prior/mixture_prior/output/RDS/ \\\n",
     "        --name 'susie'  \\\n",
     "        --container /mnt/mfs/statgen/containers/twas_latest.sif \\\n",
-    "        --cwd /home/hs3163/Project/Genome_prior/mixture_prior/output/ &"
+    "        --cwd /home/hs3163/Project/Genome_prior/mixture_prior/output/ \\\n",
+    "        -J 200 -q csg -c /home/hs3163/GIT/neuro-twas/code/csg.yml -s build &"
    ]
   },
   {
@@ -271,7 +272,7 @@
    },
    "outputs": [],
    "source": [
-    "nohup sos dryrun ~/GIT/bioworkflows/multivariate-fine-mapping/mixture_prior.ipynb ud \\\n",
+    "nohup sos run ~/GIT/bioworkflows/multivariate-fine-mapping/mixture_prior.ipynb ud \\\n",
     "        --analysis-units /home/hs3163/Project/Genome_prior/mixture_prior/output/RDS/analysis_units.txt \\\n",
     "        --datadir /home/hs3163/Project/Genome_prior/mixture_prior/output/RDS/ \\\n",
     "        --name 'susie'  \\\n",
@@ -319,7 +320,7 @@
    },
    "outputs": [],
    "source": [
-    "nohup sos run ~/GIT/bioworkflows/multivariate-fine-mapping/mixture_prior.ipynb plot_U \\\n",
+    "nohup sos run ~/GIT/bioworkflows/bioworkflows/multivariate-fine-mapping/mixture_prior.ipynb plot_U \\\n",
     "        --model_data /home/hs3163/Project/Genome_prior/mixture_prior/output/susie.ed.rds \\\n",
     "        --name \"\"  \\\n",
     "        --container /mnt/mfs/statgen/containers/twas_latest.sif \\\n",
@@ -349,14 +350,14 @@
     "nohup sos run ~/GIT/neuro-twas/workflow/mv_susie.ipynb snp_exclude \\\n",
     "--molecular_pheno_dir \"/mnt/mfs/statgen/neuro-twas/mv_wg/molecular_phenotype_list\" \\\n",
     "--region_list /mnt/mfs/statgen/neuro-twas/mv_wg/wg_rds_list_final \\\n",
-    "--wd \"/mnt/mfs/statgen/neuro-twas/whole_genome_0504/\" \\\n",
+    "--wd \"/mnt/mfs/statgen/neuro-twas/mv_wg/\" \\\n",
     "--name_prefix \"geneTpmResidualsAgeGenderAdj_rename\" \\\n",
     "--container /mnt/mfs/statgen/containers/twas_latest.sif \\\n",
     "--impute TRUE --job_size 1 \\\n",
     "--cv_times 100 \\\n",
     "--mixture_prior '/home/hs3163/Project/Genome_prior/mixture_prior/output/susie.ed.rds' \\\n",
     "--extract_snp \"~/Project/Alz/data/AD_sumstats_SNP\" \\\n",
-    "-J 200 -q csg -c ~/GIT/neuro-twas/code/csg.yml -s build &"
+    "-J 800 -q csg -c ~/GIT/neuro-twas/code/csg.yml -s build &"
    ]
   },
   {
@@ -590,7 +591,7 @@
      ""
     ]
    ],
-   "version": "0.20.1"
+   "version": "0.22.6"
   }
  },
  "nbformat": 4,
