--- a/workflow/mv_susie.ipynb
+++ b/workflow/mv_susie.ipynb
@@ -469,8 +469,7 @@
     "          --mac 1 \\\n",
     "          --make-bed \\\n",
     "          --out $[_output[1]:n] \\\n",
-    "          --allow-no-sex \\\n",
-    "          --extract $[extract_snp]"
+    "          --allow-no-sex \\"
    ]
   },
   {
@@ -1259,7 +1258,7 @@
      "sos"
     ]
    ],
-   "version": "0.20.1"
+   "version": "0.22.6"
   }
  },
  "nbformat": 4,
