--- a/workflow/complete_sumstat_mvsusieTWAS.ipynb
+++ b/workflow/complete_sumstat_mvsusieTWAS.ipynb
@@ -50,6 +50,25 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "84b6be72-57b5-4302-a325-767102eebc46",
+   "metadata": {
+    "kernel": "SoS"
+   },
+   "outputs": [],
+   "source": [
+    "nohup sos run ~/GIT/neuro-twas/workflow/GWAS_Gene_annotation.ipynb \\\n",
+    "  --wd \"/mnt/mfs/statgen/neuro-twas/TWAS_sumstat/Data/GWAS\" \\\n",
+    "  --GWAS_sumstat \"/mnt/mfs/statgen/neuro-twas/TWAS_sumstat/Data/PGCALZ2sumstatsExcluding23andMe_reformat.txt\"\\\n",
+    "  --region_list  \"/mnt/mfs/statgen/neuro-twas/mv_wg/wg_rds_list_final\"  \\\n",
+    "  --window 500000 \\\n",
+    "  --prefix \"geneTpmResidualsAgeGenderAdj_rename\" \\\n",
+    "  --container /mnt/mfs/statgen/containers/twas_latest.sif  \\\n",
+    "  -J 2000 -q csg -c /home/hs3163/GIT/bioworkflows/bioworkflows/admin/csg.yml -s build &"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "0ac43210-b240-4d20-b789-f71bd7393144",
    "metadata": {
@@ -80,11 +99,11 @@
    "source": [
     "nohup sos run /home/hs3163/GIT/bioworkflows/bioworkflows/multivariate-fine-mapping/mixture_prior.ipynb merge \\\n",
     "--molecular_pheno /mnt/mfs/statgen/neuro-twas/TWAS_sumstat/molc_dir   \\\n",
-    "--analysis-units /home/hs3163/Project/Genome_prior/data/rds_list_test  \\\n",
+    "--analysis-units /home/hs3163/Project/Genome_prior/data/rds_list  \\\n",
     "--cwd   \"/mnt/mfs/statgen/neuro-twas/TWAS_sumstat/flip\" \\\n",
     "--name \"geneTpmResidualsAgeGenderAdj_rename\" \\\n",
-    "--container /mnt/mfs/statgen/containers/twas_latest.sif  -s build & \\\n",
-    " -J 1000 -q csg -c /home/hs3163/GIT/bioworkflows/bioworkflows/admin/csg.yml "
+    "--container /mnt/mfs/statgen/containers/twas_latest.sif  \\\n",
+    " -J 1000 -q csg -c /home/hs3163/GIT/bioworkflows/bioworkflows/admin/csg.yml &"
    ]
   },
   {
@@ -98,7 +117,7 @@
    "source": [
     "nohup sos dryrun /home/hs3163/GIT/bioworkflows/bioworkflows/multivariate-fine-mapping/mixture_prior.ipynb merge \\\n",
     "--molecular_pheno /mnt/mfs/statgen/neuro-twas/TWAS_sumstat/molc_dir   \\\n",
-    "--analysis-units /home/hs3163/Project/Genome_prior/data/rds_list  \\\n",
+    "--analysis-units /mnt/mfs/statgen/neuro-twas/TWAS_sumstat/one_gene  \\\n",
     "--cwd   \"/mnt/mfs/statgen/neuro-twas/TWAS_sumstat/flip\" \\\n",
     "--name \"geneTpmResidualsAgeGenderAdj_rename\" \\\n",
     "--container /mnt/mfs/statgen/containers/twas_latest.sif &"
@@ -133,14 +152,23 @@
    },
    "outputs": [],
    "source": [
-    "cd /mnt/mfs/statgen/neuro-twas/TWAS_sumstat/  && ls *.rds | sed 's/\\.rds//g' > analysis_units.txt && cd -\n",
+    "cd /mnt/mfs/statgen/neuro-twas/flip/RDS/  && ls *.rds | sed 's/\\.rds//g' > ../analysis_units.txt && cd -\n",
     "nohup sos run ~/GIT/bioworkflows/bioworkflows/multivariate-fine-mapping/mixture_prior.ipynb extract_effects \\\n",
-    "        --analysis-units /mnt/mfs/statgen/neuro-twas/TWAS_sumstat/analysis_units.txt \\\n",
-    "        --datadir /mnt/mfs/statgen/neuro-twas/TWAS_sumstat/RDS/ \\\n",
+    "        --analysis-units /mnt/mfs/statgen/neuro-twas/TWAS_sumstat/flip/analysis_units.txt \\\n",
+    "        --datadir /mnt/mfs/statgen/neuro-twas/TWAS_sumstat/flip/RDS/ \\\n",
     "        --name 'susie_rss'  \\\n",
     "        --container /mnt/mfs/statgen/containers/twas_latest.sif \\\n",
-    "        --cwd /mnt/mfs/statgen/neuro-twas/TWAS_sumstat  \\\n",
-    "        -J 200 -q csg -c /home/hs3163/GIT/bioworkflows/bioworkflows/admin/csg.yml -s build &"
+    "        --cwd /mnt/mfs/statgen/neuro-twas/TWAS_sumstat/flip  \\\n",
+    "        -J 1000 -q csg -c /home/hs3163/GIT/bioworkflows/bioworkflows/admin/csg.yml -s build &\n",
+    "\n",
+    "\n",
+    "\n",
+    "nohup sos dryrun ~/GIT/bioworkflows/bioworkflows/multivariate-fine-mapping/mixture_prior.ipynb extract_effects \\\n",
+    "        --analysis-units /mnt/mfs/statgen/neuro-twas/TWAS_sumstat/flip/analysis_units.txt \\\n",
+    "        --datadir /mnt/mfs/statgen/neuro-twas/TWAS_sumstat/flip/RDS/ \\\n",
+    "        --name 'susie_rss'  \\\n",
+    "        --container /mnt/mfs/statgen/containers/twas_latest.sif \\\n",
+    "        --cwd /mnt/mfs/statgen/neuro-twas/TWAS_sumstat/flip &\n"
    ]
   },
   {
@@ -163,35 +191,35 @@
    "outputs": [],
    "source": [
     "nohup sos run ~/GIT/bioworkflows/bioworkflows/multivariate-fine-mapping/mixture_prior.ipynb flash \\\n",
-    "        --analysis-units /mnt/mfs/statgen/neuro-twas/TWAS_sumstat/analysis_units.txt \\\n",
-    "        --datadir /mnt/mfs/statgen/neuro-twas/TWAS_sumstat/RDS/ \\\n",
+    "        --analysis-units /mnt/mfs/statgen/neuro-twas/TWAS_sumstat/flip//analysis_units.txt \\\n",
+    "        --datadir /mnt/mfs/statgen/neuro-twas/TWAS_sumstat/flip//RDS/ \\\n",
     "        --name 'susie_rss'  \\\n",
     "        --container /mnt/mfs/statgen/containers/twas_latest.sif \\\n",
-    "        --cwd /mnt/mfs/statgen/neuro-twas/TWAS_sumstat  \\\n",
+    "        --cwd /mnt/mfs/statgen/neuro-twas/TWAS_sumstat/flip/  \\\n",
     "        -J 200 -q csg -c /home/hs3163/GIT/bioworkflows/bioworkflows/admin/csg.yml -s build &\n",
     "\n",
     "nohup sos run ~/GIT/bioworkflows/bioworkflows/multivariate-fine-mapping/mixture_prior.ipynb flash_nonneg \\\n",
-    "        --analysis-units /mnt/mfs/statgen/neuro-twas/TWAS_sumstat/analysis_units.txt \\\n",
-    "        --datadir /mnt/mfs/statgen/neuro-twas/TWAS_sumstat/RDS/ \\\n",
+    "        --analysis-units /mnt/mfs/statgen/neuro-twas/TWAS_sumstat/flip//analysis_units.txt \\\n",
+    "        --datadir /mnt/mfs/statgen/neuro-twas/TWAS_sumstat/flip//RDS/ \\\n",
     "        --name 'susie_rss'  \\\n",
     "        --container /mnt/mfs/statgen/containers/twas_latest.sif \\\n",
-    "        --cwd /mnt/mfs/statgen/neuro-twas/TWAS_sumstat  \\\n",
+    "        --cwd /mnt/mfs/statgen/neuro-twas/TWAS_sumstat/flip/  \\\n",
     "        -J 200 -q csg -c /home/hs3163/GIT/bioworkflows/bioworkflows/admin/csg.yml -s build &\n",
     "\n",
     "nohup sos run ~/GIT/bioworkflows/bioworkflows/multivariate-fine-mapping/mixture_prior.ipynb pca \\\n",
-    "        --analysis-units /mnt/mfs/statgen/neuro-twas/TWAS_sumstat/analysis_units.txt \\\n",
-    "        --datadir /mnt/mfs/statgen/neuro-twas/TWAS_sumstat/RDS/ \\\n",
+    "        --analysis-units /mnt/mfs/statgen/neuro-twas/TWAS_sumstat/flip//analysis_units.txt \\\n",
+    "        --datadir /mnt/mfs/statgen/neuro-twas/TWAS_sumstat/flip//RDS/ \\\n",
     "        --name 'susie_rss'  \\\n",
     "        --container /mnt/mfs/statgen/containers/twas_latest.sif \\\n",
-    "        --cwd /mnt/mfs/statgen/neuro-twas/TWAS_sumstat  \\\n",
+    "        --cwd /mnt/mfs/statgen/neuro-twas/TWAS_sumstat/flip/  \\\n",
     "        -J 200 -q csg -c /home/hs3163/GIT/bioworkflows/bioworkflows/admin/csg.yml -s build &\n",
     "\n",
     "nohup sos run ~/GIT/bioworkflows/bioworkflows/multivariate-fine-mapping/mixture_prior.ipynb canonical \\\n",
-    "        --analysis-units /mnt/mfs/statgen/neuro-twas/TWAS_sumstat/analysis_units.txt \\\n",
-    "        --datadir /mnt/mfs/statgen/neuro-twas/TWAS_sumstat/RDS/ \\\n",
+    "        --analysis-units /mnt/mfs/statgen/neuro-twas/TWAS_sumstat/flip//analysis_units.txt \\\n",
+    "        --datadir /mnt/mfs/statgen/neuro-twas/TWAS_sumstat/flip//RDS/ \\\n",
     "        --name 'susie_rss'  \\\n",
     "        --container /mnt/mfs/statgen/containers/twas_latest.sif \\\n",
-    "        --cwd /mnt/mfs/statgen/neuro-twas/TWAS_sumstat  \\\n",
+    "        --cwd /mnt/mfs/statgen/neuro-twas/TWAS_sumstat/flip/  \\\n",
     "        -J 200 -q csg -c /home/hs3163/GIT/bioworkflows/bioworkflows/admin/csg.yml -s build &"
    ]
   },
@@ -215,31 +243,41 @@
    "outputs": [],
    "source": [
     "nohup sos run ~/GIT/bioworkflows/bioworkflows/multivariate-fine-mapping/mixture_prior.ipynb ed \\\n",
-    "        --analysis-units /mnt/mfs/statgen/neuro-twas/TWAS_sumstat/analysis_units.txt \\\n",
-    "        --datadir /mnt/mfs/statgen/neuro-twas/TWAS_sumstat/RDS/ \\\n",
+    "        --analysis-units /mnt/mfs/statgen/neuro-twas/TWAS_sumstat/flip//analysis_units.txt \\\n",
+    "        --datadir /mnt/mfs/statgen/neuro-twas/TWAS_sumstat/flip//RDS/ \\\n",
     "        --name 'susie_rss'  \\\n",
     "        --container /mnt/mfs/statgen/containers/twas_latest.sif \\\n",
-    "        --cwd /mnt/mfs/statgen/neuro-twas/TWAS_sumstat  \\\n",
+    "        --cwd /mnt/mfs/statgen/neuro-twas/TWAS_sumstat/flip/  \\\n",
     "        -J 200 -q csg -c /home/hs3163/GIT/bioworkflows/bioworkflows/admin/csg.yml -s build &\n",
     "\n",
     "nohup sos run ~/GIT/bioworkflows/bioworkflows/multivariate-fine-mapping/mixture_prior.ipynb ud --ud-method teem \\\n",
-    "        --analysis-units /mnt/mfs/statgen/neuro-twas/TWAS_sumstat/analysis_units.txt \\\n",
-    "        --datadir /mnt/mfs/statgen/neuro-twas/TWAS_sumstat/RDS/ \\\n",
+    "        --analysis-units /mnt/mfs/statgen/neuro-twas/TWAS_sumstat/flip//analysis_units.txt \\\n",
+    "        --datadir /mnt/mfs/statgen/neuro-twas/TWAS_sumstat/flip//RDS/ \\\n",
     "        --name 'susie_rss'  \\\n",
     "        --container /mnt/mfs/statgen/containers/twas_latest.sif \\\n",
-    "        --cwd /mnt/mfs/statgen/neuro-twas/TWAS_sumstat  \\\n",
+    "        --cwd /mnt/mfs/statgen/neuro-twas/TWAS_sumstat/flip/  \\\n",
     "        --scale_only \"/mnt/mfs/statgen/neuro-twas/TWAS_sumstat/susie_rss.canonical.rds\" \\\n",
     "        -J 200 -q csg -c /home/hs3163/GIT/bioworkflows/bioworkflows/admin/csg.yml -s build &\n",
     "\n",
     "nohup sos run ~/GIT/bioworkflows/bioworkflows/multivariate-fine-mapping/mixture_prior.ipynb ud \\\n",
-    "        --analysis-units /mnt/mfs/statgen/neuro-twas/TWAS_sumstat/analysis_units.txt \\\n",
-    "        --datadir /mnt/mfs/statgen/neuro-twas/TWAS_sumstat/RDS/ \\\n",
+    "        --analysis-units /mnt/mfs/statgen/neuro-twas/TWAS_sumstat/flip//analysis_units.txt \\\n",
+    "        --datadir /mnt/mfs/statgen/neuro-twas/TWAS_sumstat/flip//RDS/ \\\n",
     "        --name 'susie_rss'  \\\n",
     "        --container /mnt/mfs/statgen/containers/twas_latest.sif \\\n",
-    "        --cwd /mnt/mfs/statgen/neuro-twas/TWAS_sumstat  \\\n",
+    "        --cwd /mnt/mfs/statgen/neuro-twas/TWAS_sumstat/flip/  \\\n",
     "        --scale_only  \"/mnt/mfs/statgen/neuro-twas/TWAS_sumstat/susie_rss.canonical.rds\" \\\n",
     "        -J 200 -q csg -c /home/hs3163/GIT/bioworkflows/bioworkflows/admin/csg.yml -s build &"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f0a77f46-856e-4636-b1d4-9c92708e1895",
+   "metadata": {
+    "kernel": "SoS"
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -261,7 +299,7 @@
    "outputs": [],
    "source": [
     "nohup sos run ~/GIT/bioworkflows/bioworkflows/multivariate-fine-mapping/mixture_prior.ipynb plot_U \\\n",
-    "        --model_data /mnt/mfs/statgen/neuro-twas/TWAS_sumstat/susie_rss.ed_bovy.rds \\\n",
+    "        --model_data /mnt/mfs/statgen/neuro-twas/TWAS_sumstat/flip/susie_rss.ed.rds \\\n",
     "        --name \"\"  \\\n",
     "        --container /mnt/mfs/statgen/containers/twas_latest.sif \\\n",
     "        --tol \"0.06\"  \\\n",
@@ -366,6 +404,75 @@
     "    --container /mnt/mfs/statgen/containers/twas_latest.sif \\\n",
     "    --prior /mnt/mfs/statgen/neuro-twas/TWAS_sumstat/susie_rss.ed_bovy.rds \\\n",
     "    -J 40 -q csg -c ~/GIT/neuro-twas/code/csg.yml -s build &"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dd4e6247-9a4e-47bf-adf4-b50a61e1adb2",
+   "metadata": {
+    "kernel": "SoS"
+   },
+   "outputs": [],
+   "source": [
+    "nohup sos run /home/hs3163/GIT/bioworkflows/bioworkflows/multivariate-fine-mapping/mvSuSiE.ipynb summary_stats_analysis   \\\n",
+    "    --analysis-units /mnt/mfs/statgen/neuro-twas/TWAS_sumstat/flip/tb1_analysis_uni.txt \\\n",
+    "    --data-dir /mnt/mfs/statgen/neuro-twas/TWAS_sumstat/flip/RDS/ \\\n",
+    "    --resid_cor /mnt/mfs/statgen/neuro-twas/TWAS_sumstat/flip/null_z_cor.rds \\\n",
+    "    --data-suffix \".rds\" \\\n",
+    "    --name \"SuSiE_rss\" \\\n",
+    "    --specicific_resid_corr \"FALSE\" \\\n",
+    "    --ld_file_prefix \"/mnt/mfs/statgen/neuro-twas/mv_wg/cache_arch/cache/\" \\\n",
+    "    --wd /mnt/mfs/statgen/neuro-twas/TWAS_sumstat/flip/ \\\n",
+    "    --container /mnt/mfs/statgen/containers/twas_latest.sif \\\n",
+    "    --prior /mnt/mfs/statgen/neuro-twas/TWAS_sumstat/flip/susie_rss.ed.rds \\\n",
+    "    -J 40 -q csg -c ~/GIT/neuro-twas/code/csg.yml & -s  build &"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "25634b9f-58f5-4b37-a6bc-d790f4012b2e",
+   "metadata": {
+    "kernel": "SoS"
+   },
+   "outputs": [],
+   "source": [
+    "nohup sos run /home/hs3163/GIT/bioworkflows/bioworkflows/multivariate-fine-mapping/mvSuSiE.ipynb summary_stats_analysis   \\\n",
+    "    --analysis-units /mnt/mfs/statgen/neuro-twas/TWAS_sumstat/one_gene  \\\n",
+    "    --data-dir /mnt/mfs/statgen/neuro-twas/TWAS_sumstat/test/ \\\n",
+    "    --resid_cor /mnt/mfs/statgen/neuro-twas/TWAS_sumstat/flip/null_z_cor.rds \\\n",
+    "    --data-suffix \".uni_weight.rds\" \\\n",
+    "    --name \"SuSiE_rss\" \\\n",
+    "    --specicific_resid_corr \"TRUE\" \\\n",
+    "    --ld_file_prefix \"/mnt/mfs/statgen/neuro-twas/mv_wg/cache_arch/cache/\" \\\n",
+    "    --wd /mnt/mfs/statgen/neuro-twas/TWAS_sumstat/susie_rss_2/ \\\n",
+    "    --container /mnt/mfs/statgen/containers/twas_latest.sif \\\n",
+    "    --prior /mnt/mfs/statgen/neuro-twas/TWAS_sumstat/flip/susie_rss.ed.rds \\\n",
+    "    -J 40 -q csg -c ~/GIT/neuro-twas/code/csg.yml & -s  build &"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f3dca65d-474e-4f9e-a9f9-bff5cbfd7d46",
+   "metadata": {
+    "kernel": "SoS"
+   },
+   "outputs": [],
+   "source": [
+    "nohup sos run /home/hs3163/GIT/bioworkflows/bioworkflows/multivariate-fine-mapping/mvSuSiE.ipynb summary_stats_analysis   \\\n",
+    "    --analysis-units /mnt/mfs/statgen/neuro-twas/TWAS_sumstat/one_gene  \\\n",
+    "    --data-dir /mnt/mfs/statgen/neuro-twas/TWAS_sumstat/flip/RDS \\\n",
+    "    --resid_cor /mnt/mfs/statgen/neuro-twas/TWAS_sumstat/flip/null_z_cor.rds \\\n",
+    "    --data-suffix \".uni_weight.rds\" \\\n",
+    "    --name \"SuSiE_rss\" \\\n",
+    "    --specicific_resid_corr \"TRUE\" \\\n",
+    "    --ld_file_prefix \"/mnt/mfs/statgen/neuro-twas/mv_wg/cache_arch/cache/\" \\\n",
+    "    --wd /mnt/mfs/statgen/neuro-twas/TWAS_sumstat/susie_rss_3/ \\\n",
+    "    --container /mnt/mfs/statgen/containers/twas_latest.sif \\\n",
+    "    --prior /mnt/mfs/statgen/neuro-twas/TWAS_sumstat/flip/susie_rss.ed.rds \\\n",
+    "    -J 40 -q csg -c ~/GIT/neuro-twas/code/csg.yml & -s  build &"
    ]
   },
   {
